# src/modules/Users/Users.schema.ts
@@ -1,11 +1,7 @@
 import mongoose, { Document, Schema } from "mongoose";
+import { User } from "./interface/Users.interface";
 
-export interface UserDocument extends Document {
-  username: string;
-  password: string;
-  role: "admin" | "employee";
-  employee?: mongoose.Types.ObjectId;
-}
+export interface UserDocument extends Document, User {}
 
 const UserSchema: Schema = new mongoose.Schema({
   username: {
@@ -22,9 +18,45 @@ const UserSchema: Schema = new mongoose.Schema({
     enum: ["admin", "employee"],
     required: true,
   },
-  employee: {
-    type: mongoose.Schema.Types.ObjectId,
-    ref: "Employee",
+  IDNumber: {
+    type: String,
+    required: true,
+    unique: true,
+  },
+  firstName: {
+    type: String,
+    required: true,
+  },
+  lastName: {
+    type: String,
+    required: true,
+  },
+  email: {
+    type: String,
+    required: true,
+    unique: true,
+  },
+  dateOfBirth: {
+    type: Date,
+  },
+  homeAddress: {
+    type: String,
+  },
+  mobilePhone: {
+    type: String,
+  },
+  vaccinationStatus: {
+    type: Boolean,
+    default: false,
+  },
+  vaccineType: {
+    type: String,
+  },
+  vaccinationDate: {
+    type: Date,
+  },
+  numberOfDoses: {
+    type: Number,
   },
 });
 
