# src/modules/Users/types/index.ts
@@ -1,0 +1,12 @@
+export enum Role {
+    ADMIN = "admin",
+    EMPLOYEE = "employee",
+  }
+  
+  export enum Service {
+    CREATE_USER = "createUser",
+    GET_USER = "getUser",
+    UPDATE_USER = "updateUser",
+    DELETE_USER = "deleteUser",
+    GET_USERS = "getUsers",
+  }
